# airos

./: .cproject  .gitignore  .project  README.md  STM32F401CCUX_FLASH.ld  airos_main Debug.launch  airos_main.ioc
Core/Src/: main.c  stm32f4xx_it.c
Core/Startup/: airos_task.s
Debug/: airos_main.elf  airos_main.list  airos_main.map  makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_it.su  subdir.mk
Debug/Core/Startup/: airos_task.d  subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Debug/airos/: airos_queue.cyclo  airos_queue.d  airos_queue.su  airos_task.cyclo  airos_task.d  airos_task.su  subdir.mk
airos/: CMakeLists.txt  airos.h  airos_chan.c  airos_chan.h  airos_config.h  airos_context.c  airos_context.h  airos_mutex.c  airos_mutex.h  airos_queue.c  airos_queue.h  airos_syscall.c  airos_task.c  airos_task.h
